rust/herb-highlighter/tests/snapshots/integration_test__diffs_two_files_via_the_diff_subcommand.snap
---
source: herb-highlighter/tests/integration_test.rs
expression: stdout
---
<before> → <after>

      1 │ <div>
  -   2 │   <span class='card'>x</span>
  +     │   <span class="card">x</span>
      3 │ </div>
