rust/herb-highlighter/tests/snapshots/integration_test__highlights_a_file_via_the_cli.snap
---
source: herb-highlighter/tests/integration_test.rs
expression: "fixture.normalize(&String::from_utf8_lossy(&output.stdout))"
---
[36m<test-file>[0m

    [90m  1[0m [90m│[0m [38;2;224;108;117m<[0m[38;2;224;108;117mh1[0m [38;2;209;154;102mclass[0m[38;2;86;182;194m=[0m[38;2;152;195;121m"[0m[38;2;152;195;121mtitle[0m[38;2;152;195;121m"[0m[38;2;224;108;117m>[0m
    [90m  2[0m [90m│[0m   [38;2;190;80;70m<%[0m [38;2;198;120;221mif[0m user.present? [38;2;190;80;70m%>[0m
    [90m  3[0m [90m│[0m     [38;2;171;178;191mWelcome[0m [38;2;190;80;70m<%=[0m user.name [38;2;190;80;70m%>[0m[38;2;198;120;221m![0m
    [90m  4[0m [90m│[0m   [38;2;190;80;70m<%[0m [38;2;198;120;221melse[0m [38;2;190;80;70m%>[0m
    [90m  5[0m [90m│[0m     [38;2;171;178;191mPlease[0m [38;2;171;178;191msign[0m [38;2;171;178;191min[0m
    [90m  6[0m [90m│[0m   [38;2;190;80;70m<%[0m [38;2;198;120;221mend[0m [38;2;190;80;70m%>[0m
    [90m  7[0m [90m│[0m [38;2;224;108;117m</[0m[38;2;224;108;117mh1[0m[38;2;224;108;117m>[0m
