rust/herb-highlighter/tests/snapshots/integration_test__renders_a_diff_given_as_json.snap
---
source: herb-highlighter/tests/integration_test.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
  -   1 │ <img src="a.png">
  +     │ <img src="a.png" alt="">
