rust/herb-highlighter/tests/snapshots/integration_test__respects_the_no_color_environment_variable.snap
---
source: herb-highlighter/tests/integration_test.rs
expression: fixture.normalize(&stdout)
---
<test-file>

      1 │ <h1 class="title">
      2 │   <% if user.present? %>
      3 │     Welcome <%= user.name %>!
      4 │   <% else %>
      5 │     Please sign in
      6 │   <% end %>
      7 │ </h1>
